Overlay and Z-Index fixed

--- a/style.css
+++ b/style.css
@@ -11,6 +11,8 @@ body{
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
     position: relative;
     display: inline-block;
+    overflow: hidden;
+    z-index: 1;
 }
 
 .image-card img {
@@ -20,11 +22,31 @@ body{
 
 .badge {
     position: absolute;
-    background-color: red;
+    background-color: blue;
     top: 10px;
     right: 10px;
     color: white;
     padding: 4px 8px;
     border-radius: 8px;
     font-weight: bold;
+    z-index: 3;
 }
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    color:white;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
+    z-index: 2;
+    opacity: 0;
+    font-size: 16px;
+}
+
+.image-card:hover .overlay{
+    opacity: 1;
+    transition: opacity 0.3s ease;
+}
+
